@startuml

package "UI + Application Layer" <<Rectangle>> {
    class TopFragment {
        + onCreateView()
        + onCreate()
        + onResume()
    }
    class JobService {
        + onStartJob()
        + onStopJob()
        + {static} schedule()
    }
    abstract ViewModel {
        + viewModelScope: CoroutineScope
    }
    class TopViewModel {
        + userList: LiveData<List<User>>
        + isLoading: LiveData<Boolean>
        - _userList: MediatorLiveData<List<User>>
        - _isLoading: MediatorLiveData<Boolean>
        + load()
        + register(User)
    }
}

package "Domain Layer" <<Rectangle>> {
    abstract Usecase {
        # result: MediatorLiveData<UsecaseResult<*>>
        + source: LiveData<UsecaseResult<*>>
        + execute(param: *)
    }
    class LoadUserUsecase {
        # call(param: Unit): Deferred<List<User>>
    }
    class RegisterUserUsecase {
        # call(param: User): Deferred<Unit>
    }
    class BackgroundUsecase {
        # call(param: Unit): Deferred<Unit>
    }
}

package "Infrastructure Layer" <<Rectangle>> {
    interface UserRepository {
        + getAllUser(): List<User>
        + addUser(User)
    }
    class UserRepositoryImpl << (O,#FF7700) Singleton >> {
        # getAllUser(): List<User>
        # addUser(User)
    }
    class UserLocalDataSource << (O,#FF7700) Singleton >> {
        + getAll(): List<User>
        + insertAll(List<User>)
        + deleteAll()
    }
    class UserRemoteDataSource << (O,#FF7700) Singleton >> {
        + getUser(): List<User>
        + postUser(User)
    }
    class AppDatabase << (O,#FF7700) Singleton >> {
        ~ {static} getDatabase()
    }
    class AppRestApi << (O,#FF7700) Singleton >> {
        ~ fetch(ApiParameter): ApiResult<*>
    }
}

package "Entity Layer" <<Rectangle>> {
    enum UsecaseResult {
        Pending
        Resolved
        Rejected
        + isFinished()
        + isLoading()
    }
    enum ApiResult {
        Success
        Failed
    }
    enum ApiParameter {
        GetParameter
        PostParameter
        + call(url, body, header)
     }
    interface UserDao {
        + getAll()
        + insertAll()
        + deleteAll()
    }
}

TopFragment -ri-> TopViewModel
TopViewModel -do-|> ViewModel

JobService -ri-> BackgroundUsecase
TopViewModel -ri-> LoadUserUsecase
TopViewModel -ri-> RegisterUserUsecase

LoadUserUsecase ---do-|> Usecase
RegisterUserUsecase --do-|> Usecase
BackgroundUsecase -do-|> Usecase

LoadUserUsecase -ri-> UserRepository
RegisterUserUsecase -ri-> UserRepository

Usecase -do- UsecaseResult
UserRepository <|.. UserRepositoryImpl

UserRepositoryImpl o-do- UserLocalDataSource : aggregation
UserLocalDataSource -do-> AppDatabase
AppDatabase o-do- UserDao : aggregation

UserRepositoryImpl o-do- UserRemoteDataSource : aggregation
UserRemoteDataSource -do-> AppRestApi
AppRestApi -- ApiParameter
AppRestApi -- ApiResult


'Foo -up-> 上
'Foo -do-> 下
'Foo -le-> 左
'Foo -ri-> 右

@enduml